# fennec

./: .gitignore  .goreleaser.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  estimate-battery-parameters.py  renovate.json
.cargo/: config.toml
energy-monitor/: Cargo.toml  wrangler.toml
energy-monitor/src/: home_wizard.rs  lib.rs  timer.rs  tracing.rs
fennec-cli/: Cargo.toml
fennec-cli/src/: api.rs  battery.rs  cli.rs  collections.rs  core.rs  cron.rs  db.rs  energy.rs  engine.rs  fmt.rs  main.rs  math.rs  ops.rs  prelude.rs  quantity.rs  schedule.rs  series.rs  solution.rs  state.rs  statistics.rs  tables.rs  web.rs
fennec-cli/src/api/: battery.rs  fox_cloud.rs  foxcloud.rs  foxess.rs  frank_energie.rs  heartbeat.rs  home_assistant.rs  homewizard.rs  mini_qube.rs  modbus.rs  next_energy.rs
fennec-cli/src/api/battery/: metrics.rs  schedule.rs
fennec-cli/src/api/fox_cloud/: response.rs  schedule.rs  working_mode.rs
fennec-cli/src/api/foxcloud/: schedule.rs  working_mode.rs
fennec-cli/src/api/foxess/: models.rs  schedule.rs  working_mode.rs
fennec-cli/src/api/mini_qube/: metrics.rs  schedule.rs
fennec-cli/src/api/modbus/: battery.rs  battery_state.rs  client.rs  endpoint.rs  foxess.rs  legacy.rs  mq2200.rs  pool.rs  schedule.rs  sma.rs  url.rs  value.rs
fennec-cli/src/battery/: args.rs  efficiency.rs  metrics.rs  power_limits.rs  simulator.rs  state.rs  working_mode.rs
fennec-cli/src/cli/: battery.rs  burrow.rs  connection.rs  db.rs  estimation.rs  fox_cloud.rs  foxcloud.rs  foxess.rs  go.rs  heartbeat.rs  hunt.rs  hunter.rs  log.rs  logger.rs  pv.rs  run.rs  sentry.rs  state.rs  trace.rs  web.rs
fennec-cli/src/core/: battery.rs  energy.rs  energy_level.rs  flow.rs  interval.rs  provider.rs  quantum.rs  series.rs  solution.rs  solution_space.rs  solver.rs  step.rs  working_mode.rs
fennec-cli/src/core/battery/: efficiency.rs  simulator.rs  state.rs  working_mode.rs
fennec-cli/src/core/energy/: balance.rs  profile.rs
fennec-cli/src/core/flow/: energy_balance.rs  statistics.rs
fennec-cli/src/core/series/: extend.rs
fennec-cli/src/core/solution/: metrics.rs  space.rs  step.rs  summary.rs
fennec-cli/src/core/solver/: battery.rs  energy.rs  step.rs
fennec-cli/src/db/: battery.rs  battery_log.rs  battery_logs.rs  commands.rs  compound.rs  consumption.rs  key.rs  legacy_db.rs  legacy_key.rs  log.rs  measurement.rs  measurements.rs  meter_log.rs  power.rs  primitive.rs  primitives.rs  scalar.rs  scalars.rs  selectable.rs  state.rs  timestamp.rs  transition.rs  transitions.rs
fennec-cli/src/energy/: balance.rs  flow.rs  profile.rs  provider.rs
fennec-cli/src/fmt/: tables.rs
fennec-cli/src/math/: fourier.rs  integrator.rs  smoothing.rs
fennec-cli/src/ops/: cache.rs  chrono.rs  integrator.rs  interval.rs  musli.rs  range.rs  schedule.rs  smoothing.rs
fennec-cli/src/ops/musli/: chrono.rs  fs.rs
fennec-cli/src/quantity/: angle.rs  arith.rs  cost.rs  currency.rs  energy.rs  fmt.rs  macros.rs  ops.rs  percent.rs  power.rs  price.rs  proportions.rs  quantum.rs  rate.rs  ratios.rs  time.rs  zero.rs
fennec-cli/src/quantity/angle/: harmonic.rs  radians.rs
fennec-cli/src/quantity/energy/: decawatt_hours.rs  kilowatt_hours.rs  milliwatt_hours.rs  watt_hours.rs
fennec-cli/src/quantity/power/: kilowatts.rs  watts.rs
fennec-cli/src/quantity/proportions/: basis_points.rs  percent.rs
fennec-cli/src/solution/: backtrack.rs  losses.rs  metrics.rs  optimized.rs  optimizer.rs  plan.rs  solved.rs  solver.rs  space.rs  stage.rs  step.rs
fennec-cli/src/statistics/: accumulator.rs  battery.rs  consumption.rs  energy.rs  flow.rs  household.rs  integrator.rs  rates.rs  system_flow.rs
fennec-cli/src/web/: application.rs  battery.rs  color.rs  colors.rs  handlers.rs  partials.rs  residual_energy.rs  state.rs  status.rs  working_mode.rs
fennec-cli/src/web/handlers/: energy_balance.rs  energy_profile.rs  index.rs  readiness.rs
fennec-energy-monitor/: Cargo.toml  wrangler.toml
fennec-energy-monitor/migrations/: 0001_Create_meters_table.sql
fennec-energy-monitor/src/: home_wizard.rs  homewizard.rs  lib.rs  modbus.rs  timer.rs
fennec-modbus/: Cargo.toml  README.md
fennec-modbus/src/: cli.rs  client.rs  contrib.rs  error.rs  function.rs  lib.rs  main.rs  pdu.rs  protocol.rs  tcp.rs
fennec-modbus/src/cli/: mini_qube.rs  mq2200.rs
fennec-modbus/src/contrib/: mini_qube.rs  mq2200.rs  types.rs
fennec-modbus/src/contrib/mini_qube/: functions.rs  schedule.rs  types.rs
fennec-modbus/src/contrib/mq2200/: schedule.rs
fennec-modbus/src/function/: read_holding_registers.rs
fennec-modbus/src/pdu/: error.rs  exception.rs  function.rs  request.rs  response.rs
fennec-modbus/src/pdu/function/: read_coils.rs  read_discrete_inputs.rs  read_exception_status.rs  read_holding_registers.rs  read_input_registers.rs  write_multiple_coils.rs  write_multiple_registers.rs  write_single_coil.rs  write_single_register.rs
fennec-modbus/src/protocol/: address.rs  bytes.rs  codec.rs  data_unit.rs  error.rs  exception.rs  function.rs  request.rs  response.rs  struct.rs
fennec-modbus/src/protocol/bytes/: adapters.rs
fennec-modbus/src/protocol/codec/: adapters.rs  bit_size.rs  decoder.rs  encoder.rs
fennec-modbus/src/protocol/function/: address.rs  read.rs  read_coils.rs  read_discrete_inputs.rs  read_exception_status.rs  read_holding_registers.rs  read_input_registers.rs  read_multiple.rs  read_registers.rs  read_write_multiple.rs  size.rs  size_argument.rs  write_multiple.rs  write_multiple_coils.rs  write_multiple_registers.rs  write_single_coil.rs  write_single_register.rs
fennec-modbus/src/protocol/function/read_registers/: value.rs
fennec-modbus/src/tcp/: adu.rs  client.rs  codec.rs  context.rs  decoder.rs  encoder.rs  error.rs  header.rs  tokio.rs  transaction.rs  unit_id.rs
fennec-quantities/: Cargo.toml
fennec-quantities/src/: energy.rs  lib.rs  power.rs  rate.rs
modbus-proxy/: Cargo.toml
modbus-proxy/src/: cli.rs  main.rs  result.rs
quantities/: Cargo.toml
quantities/src/: cost.rs  interval.rs  lib.rs
(+128 files in other folders)
