[workspace]
members = [
    "fennec-cli",
]
resolver = "3"

[workspace.package]
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
edition = "2024"
keywords = ["foxess", "nextenergy", "home-battery"]
license = "MIT"
publish = false
readme = "README.md"
repository = "https://github.com/eigenein/fennec"
rust-version = "1.92"
version = "0.69.0"

[workspace.lints.clippy]
future_not_send = "allow"
missing_errors_doc = "allow"
type_repetition_in_bounds = "allow"

[workspace.lints.clippy.pedantic]
level = "warn"
priority = -1

[workspace.lints.clippy.nursery]
level = "warn"
priority = -1

[workspace.lints.clippy.all]
level = "warn"
priority = -1

[profile.release]
codegen-units = 1
debug = "full"
lto = "thin"
