[workspace]
members = [
    "fennec-cli",
    "fennec-modbus",
]
resolver = "3"

[workspace.package]
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
description = "FoxESS home battery steering based on Next Energy or Frank Energie real-time prices"
edition = "2024"
keywords = ["foxess", "nextenergy", "frank-energie", "home-battery"]
license = "MIT"
repository = "https://github.com/eigenein/fennec"
rust-version = "1.93"
version = "0.88.3"

[workspace.lints.clippy]
future_not_send = "allow"
missing_errors_doc = "allow"
type_repetition_in_bounds = "allow"

[workspace.lints.clippy.pedantic]
level = "warn"
priority = -1

[workspace.lints.clippy.nursery]
level = "warn"
priority = -1

[workspace.lints.clippy.all]
level = "warn"
priority = -1

[profile.release]
codegen-units = 1
debug = "full"
lto = "thin"
