[workspace]
members = [
    "fennec-cli",
    "fennec-modbus",
]
resolver = "3"

[workspace.package]
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
description = "FoxESS home battery steering based on Frank Energie real-time prices"
edition = "2024"
keywords = ["foxess", "frank-energie", "home-battery"]
license = "MIT"
repository = "https://github.com/eigenein/fennec"
rust-version = "1.97"
version = "0.95.1"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"

[workspace.lints.clippy]
doc_markdown = "allow"
future_not_send = "allow"
missing_errors_doc = "allow"

[workspace.lints.clippy.pedantic]
level = "warn"
priority = -1

[workspace.lints.clippy.nursery]
level = "warn"
priority = -1

[workspace.lints.clippy.all]
level = "warn"
priority = -1

[profile.release]
codegen-units = 1
debug = "full"
lto = "thin"
overflow-checks = true
