[package]
name = "energy-monitor"
version = "0.1.0"
edition = "2021"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = "full"
lto = "fat"

[dependencies]
worker = { version = "0.7", features = ["http"] }
worker-macros = { version = "0.7", features = ["http"] }
http = "1.3"
