[package]
name = "energy-monitor"
version = "0.1.0"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
edition = "2024"
rust-version = "1.92"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
anyhow = "=1.0.100"
http = "=1.4.0"
serde = "=1.0.228"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["json"] }
tracing-web = "=0.1.3"
quantities = { path = "../quantities" }
worker = "=0.7.4"
worker-macros = { version = "=0.7.4", features = ["http"] }

[dev-dependencies]
serde_json = "=1.0.148"
