[package]
name = "fennec-cli"
description = "FoxESS home battery steering based on Next Energy or Frank Energie real-time prices"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[badges]
is-it-maintained-issue-resolution = { repository = "eigenein/fennec" }
is-it-maintained-open-issues = { repository = "eigenein/fennec" }

[dependencies]
anyhow = "=1.0.102"
average = "=0.16.0"
bon = "=3.9.0"
bson = { version = "=3.1.0", features = ["chrono-0_4", "serde_with-3"] }
chrono = { version = "=0.4.43", default-features = false, features = ["clock", "serde"] }
clap = { version = "=4.5.60", features = ["cargo", "derive", "env", "unicode"] }
comfy-table = "=7.2.2"
derive_more = { version = "=2.1.1", features = ["full"] }
dotenvy = "=0.15.7"
enumset = "=1.1.10"
futures-core = "=0.3.32"
futures-util = "=0.3.32"
http = "=1.4.0"
humantime = "=2.3.0"
itertools = "=0.14.0"
linfa = "=0.8.1"
linfa-linear = "=0.8.1"
md5 = "=0.8.0"
mongodb = { version = "=3.5.1", features = ["bson-3", "zlib-compression", "snappy-compression", "zstd-compression"] }
ndarray = "=0.16.1"
ordered-float = "=5.1.0"
reqwest = { version = "=0.13.2", default-features = false, features = ["json", "rustls", "deflate", "brotli", "gzip", "http2"] }
rustc-hash = "=2.1.1"
sentry = { version = "=0.46.2", default-features = false, features = ["rustls", "tracing", "backtrace", "contexts", "panic", "reqwest", "anyhow", "release-health"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serde_qs = "=1.0.0"
serde_with = { version = "=3.16.1", features = ["chrono"] }
tokio = { version = "=1.49.0", default-features = false, features = ["rt", "macros", "net"] }
tokio-modbus = { version = "=0.17.0", default-features = false, features = ["tcp"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
url = "=2.5.8"
