[package]
name = "fennec-cli"
description.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[badges]
is-it-maintained-issue-resolution = { repository = "eigenein/fennec" }
is-it-maintained-open-issues = { repository = "eigenein/fennec" }

[dependencies]
anyhow = "1.0.102"
average = "0.16.0"
axum = { version = "0.8.8", features = ["http2"] }
backon = { version = "1.6.0", features = ["tokio-sleep"] }
bon = "3.9.1"
bson = { version = "3.1.0", features = ["chrono-0_4", "serde_with-3"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
chrono-humanize = "0.2.3"
clap = { version = "4.6.0", features = ["cargo", "derive", "env", "unicode"] }
comfy-table = "7.2.2"
croner = "3.0.1"
derive_more = { version = "2.1.1", features = ["full"] }
dotenvy = "0.15.7"
enumset = "1.1.10"
# fm-rs = "0.1.5"
futures-core = "0.3.32"
futures-util = "0.3.32"
http = "1.4.0"
humantime = "2.3.0"
itertools = "0.14.0"
maud = { version = "0.27.0", features = ["axum"] }
md5 = "0.8.0"
mongodb = { version = "3.5.2", features = ["bson-3", "zlib-compression", "snappy-compression", "zstd-compression"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "deflate", "brotli", "gzip", "http2"] }
sentry = { version = "0.47.0", default-features = false, features = ["rustls", "tracing", "backtrace", "contexts", "panic", "reqwest", "anyhow", "release-health"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3.18.0", features = ["chrono"] }
tokio = { version = "1.50.0", default-features = false, features = ["rt", "macros", "net"] }
tokio-modbus = { version = "0.17.0", default-features = false, features = ["tcp"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
