[package]
name = "fennec-energy-monitor"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# TODO: remove "lib" when the Modbus proxy goes away:
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[dependencies]
anyhow = "=1.0.100"
futures = { version = "=0.3.31", default-features = false, features = ["async-await"] }
serde = "=1.0.228"
time = { version = "=0.3.45", default-features = false, features = ["formatting"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["json"] }
tracing-web = "=0.1.3"
fennec-quantities = { path = "../fennec-quantities" }
worker = "=0.7.4"
worker-macros = { version = "=0.7.4", features = ["http"] }

[dev-dependencies]
serde_json = "=1.0.148"
