[package]
name = "fennec-modbus"
description = "Modular Modbus client implementation"
keywords = ["modbus", "hardware"]
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]

[[bin]]
name = "fennec-modbus"
required-features = ["cli"]

[features]
## Enable the CLI tool.
cli = ["dep:clap"]
## Enable Tokio TCP transport.
tokio = ["dep:tokio"]

[lints]
workspace = true

[dependencies]
binrw = { version = "0.15.1", default-features = false }
bon = { version = "3.9.1", default-features = false }
clap = { version = "4.6.0", optional = true, features = ["cargo", "derive", "env", "unicode"] }
derive_more = { version = "2.1.1", default-features = false, features = ["debug", "unwrap", "try_unwrap"] }
thiserror = { version = "2.0.18", default-features = false }
tokio = { version = "1.51.1", default-features = false, optional = true, features = ["net"] }

[dev-dependencies]
modular-bitfield = { version = "0.13.1", default-features = false }
