[package]
name = "fennec-modbus"
description = "Modular Modbus client implementation"
keywords = ["modbus", "modbus-client", "hardware"]
readme = "README.md"
documentation = "https://docs.rs/fennec-modbus"
publish = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]

[features]
default = ["tokio"]
## Enable Tokio TCP transport.
tokio = ["dep:tokio", "dep:socket2"]
## Enable tracing events.
tracing = ["dep:tracing"]

[lints]
workspace = true

[dependencies]
bytes = { version = "1.11.1", default-features = false }
socket2 = { version = "0.6.3", optional = true }
thiserror = { version = "2.0.18", default-features = false }
tokio = { version = "1.51.1", default-features = false, optional = true, features = ["net", "sync", "time", "io-util"] }
tracing = { version = "0.1.44", optional = true }

[dev-dependencies]
anyhow = "1.0.102"
