[package]
name = "fennec-quantities"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { version = "=0.4.43", default-features = false }
derive_more = { version = "=2.1.1", features = ["full"] }
ordered-float = { version = "=5.1.0", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
