[package]
name = "quantities"
version = "0.1.0"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
edition = "2024"
rust-version = "1.92"

[lints]
workspace = true

[dependencies]
chrono = { version = "=0.4.43", default-features = false }
derive_more = { version = "=2.1.1", features = ["full"] }
ordered-float = { version = "=5.1.0", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
